-Modified cmsPerfPublish to fix several problems. The paths for the logfiles were being passed in full to the html and thus the link was wrong. The directory browsing dir seems to have been broken for a while now, it should have been a symlink and not a dir. The css file was messing around with the line-height which made it unreadable when viewing the pages with certain browsers. These have fixed. There is a remaining problem with parsing the production date from the log files, these seems to be because the string 'cmsCreateSimPerfTest' does not exist in these logfiles.

--- a/Validation/Performance/doc/perf_style.css
+++ b/Validation/Performance/doc/perf_style.css
@@ -1,39 +1,41 @@
 body{ 
     font-family: Trebuchet MS, Lucida Sans Unicode, Arial, sans-serif;
-    margin-left:29%;
+    /*margin-left:29%;
     margin-top:5%;
     margin-right:29%;
-    margin-bottom:5%;
+    margin-bottom:5%;*/
     padding:0px;
     height:100%;
-    line-height:80%;
+    /*line-height:80%;*/
     background-color:#E2EBED; 
-    font-size:12;
+    /*font-size:12;*/
 }   
 
 h1 {
  font-family:arial, "Lucida Grande", verdana, sans-serif;
- font-size:26;
+ /*font-size:26;*/
  font-weight: bold;
  text-align: center
 }
 h2 {
  font-family:arial, "Lucida Grande", verdana, sans-serif;
- font-size:18;
+ /*font-size:18;*/
 }
 
 h3 {
  font-family:arial, "Lucida Grande", verdana, sans-serif;
- font-size:15;
+ /*font-size:15;*/
 }
 
 p {
  font-family:arial, "Lucida Grande", verdana, sans-serif;
- font-size:13;
+ /*font-size:13;*/
 }
 
+table {width: 80%}
+
  li.c2 {list-style: none}
- ul.c1 {font-size: 13}
+ /*ul.c1 {font-size: 13}*/
  td {background-color: #FFFFFE ; width : 25%}
 
 img { border:none;} 
